added 2 ai participants

--- a/server_full/.env
+++ b/server_full/.env
@@ -1,4 +1,3 @@
+MONGO_URI=mongodb://shreyas:shreyas@ac-so3v3fr-shard-00-00.dd2xhiy.mongodb.net:27017,ac-so3v3fr-shard-00-01.dd2xhiy.mongodb.net:27017,ac-so3v3fr-shard-00-02.dd2xhiy.mongodb.net:27017/ai-debater?ssl=true&replicaSet=atlas-11nqpa-shard-0&authSource=admin&retryWrites=true&w=majority
 PORT=3000
-MONGO_URI=mongodb://127.0.0.1:27017/ai-debater
-GEMINI_API_KEY=
-JWT_SECRET=my_secret_key
+GEMINI_API_KEY=your_key
