--- a/server_full/.env.example
+++ b/server_full/.env.example
@@ -1,5 +1,5 @@
 
 PORT=3000
-MONGO_URI=mongodb+srv://shreyas:shreyas@ai-debator.dd2xhiy.mongodb.net/?appName=AI-debator
+MONGO_URI=MONGO_URI=mongodb+srv://shreyas:shreyas@ai-debator.dd2xhiy.mongodb.net/ai-debater?retryWrites=true&w=majority&appName=AI-debator
 GEMINI_API_KEY=
 JWT_SECRET=my_secret_key
